// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<View /> View with children 1`] = `
<frame
  backgrounds={
    Array [
      Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "r": 0,
        },
        "opacity": 0,
        "type": "SOLID",
      },
    ]
  }
  innerRef={
    Object {
      "current": undefined,
    }
  }
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 1,
    }
  }
>
  <text
    fills={
      Array [
        Object {
          "color": Object {
            "b": 0,
            "g": 0,
            "r": 0,
          },
          "opacity": 1,
          "type": "SOLID",
        },
      ]
    }
    innerRef={
      Object {
        "current": undefined,
      }
    }
    loadedFont={null}
    style={Object {}}
  >
    text
  </text>
</frame>
`;

exports[`<View /> View with children and rectangle styles 1`] = `
<frame
  backgrounds={
    Array [
      Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "r": 1,
        },
        "opacity": 1,
        "type": "SOLID",
      },
    ]
  }
  innerRef={
    Object {
      "current": undefined,
    }
  }
  style={
    Object {
      "backgroundColor": "#ff0000",
      "flex": 1,
    }
  }
>
  <text
    fills={
      Array [
        Object {
          "color": Object {
            "b": 0,
            "g": 0,
            "r": 0,
          },
          "opacity": 1,
          "type": "SOLID",
        },
      ]
    }
    innerRef={
      Object {
        "current": undefined,
      }
    }
    loadedFont={null}
    style={Object {}}
  >
    text
  </text>
</frame>
`;

exports[`<View /> View with layoutAlign 1`] = `
<rectangle
  fills={
    Array [
      Object {
        "color": Object {
          "b": 0.592156862745098,
          "g": 0.6666666666666666,
          "r": 1,
        },
        "opacity": 1,
        "type": "SOLID",
      },
    ]
  }
  height={40}
  innerRef={
    Object {
      "current": undefined,
    }
  }
  layoutAlign="MAX"
  layoutMode="HORIZONTAL"
  style={
    Object {
      "alignSelf": "flex-end",
      "backgroundColor": "#ffaa97",
      "flexDirection": "row",
      "height": 40,
      "width": 80,
    }
  }
  width={80}
/>
`;

exports[`<View /> View without children 1`] = `
<rectangle
  fills={
    Array [
      Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "r": 1,
        },
        "opacity": 1,
        "type": "SOLID",
      },
    ]
  }
  innerRef={
    Object {
      "current": undefined,
    }
  }
  style={
    Object {
      "backgroundColor": "#ff0000",
    }
  }
/>
`;
